# advent-of-code

./: .gitignore
2022/: README.md  jest.config.ts  package-lock.json  package.json  tsconfig.json
2022/src/: day01.md  day01.test.ts  day01.ts  day02.md  day02.test.ts  day02.ts  main.test.ts  main.ts
2023/: README.md
2023/aoc/: aoc.opam  dune-project
2023/aoc/lib/: day01.md  day01.ml
2023/aoc/test/: aoc.ml  dune
2024/: README.md
2024/aoc/: go.mod
2024/aoc/day01/: day01.md  day01_test.go  main.go
2024/aoc/day02/: day02.md  day02_test.go  main.go
2024/aoc/day03/: day03.md  day03_test.go  main.go
