(lang dune 3.11)

(name aoc)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Stefan Alfbo")

(maintainers "Stefan Alfbo")

(license MIT)

(documentation https://github.com/stefanalfbo/advent-of-code/)

(package
 (name aoc)
 (synopsis "2023 Advent of Code solutions")
 (description "2023 Advent of Code solutions in OCaml")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
